Implement npm agent registry overriding